[package]
name = "smash_rl_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smash_rl_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "run"
path = "src/binaries/run.rs"

[[bin]]
name = "run_env"
path = "src/binaries/run_env.rs"

[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[dependencies]
pyo3 = "0.18.3"
rand = "0.8.5"
bevy = { version = "0.10.0", features = ["wayland"] }
bevy_rapier2d = { version = "0.21.0", features = ["simd-nightly", "debug-render-2d"] }
bevy_save = "0.8.0"
rmp-serde = "1.1.1"
tch = "0.13.0"
buffer-graphics-lib = "0.11.4"
minifb = "0.24.0"
weighted_rand = "0.4.0"
pyo3-tch = "0.13.0"